refactor: HTTP/2 reset defense, GOAWAY semantics and TLS reload design
Inbound RST bursts trip the connection with GOAWAY(ENHANCE_YOUR_CALM);
only cancels arriving before the server committed a response count, so
post-response cancels and dead-stream resets never trip the breaker. The
guard is tunable via freeway.http.h2.reset-burst-limit/window, threaded
from HttpConfigKeys through HttpServerConfig into Http2Session (0
disables). GOAWAY reports a separate lastHandledStreamId so refused
streams are never claimed as possibly processed. TLS reload is now
event-driven (WatchService with reschedule debounce) on a single
scheduler-thread owner behind a private lock, with the poll kept as
fallback; the HTTP/2 preface decodes as US-ASCII.